# youtube

./: .gitignore  DEVELOPER.md  README.md  pyproject.toml
src/youtube/: __init__.py  server.py
src/youtube/core/: embeddings.py  prompts.py  report.py  research.py  transcripts.py  youtube_api.py
src/youtube/tools/: research_tool.py
